--- a/user_gudang/request_stock_detail_diterima.html
+++ b/user_gudang/request_stock_detail_diterima.html
@@ -339,50 +339,30 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <span class="kt-margin-10 kt-font-bold kt-font-brand">Terkirim</span><i class="flaticon2-next" style="padding: 10px 0px;"></i>
                                                 <span class="kt-margin-10 kt-font-bold kt-font-brand">Diterima</span>
                                             </div>
-                                            <table class="table table-bordered table-hover well-align-table" role="grid">
-                                                <thead>
-                                                    <tr role="row">
-                                                        <th style="width: 5%">No</th>
-                                                        <th style="width: 25%">Nama Barang</th>
-                                                        <th style="width: 15%">Satuan</th>
-                                                        <th style="width: 12.5%">Request</th>
-                                                        <th style="width: 12.5%">Terkirim</th>
-                                                        <th style="width: 12.5%">Diterima</th>
-                                                        <th style="width: 17.5%">Margin Hilang</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody id="item_list">
-                                                    <tr role="row">
-                                                        <td>1</td>
-                                                        <td class="text-center">
-                                                            <select class="form-control" name="request_barang" disabled>
-        														<option>Eyelash Size 12</option>
-        														<option>Eyelash Size 12</option>
-        														<option>Eyelash Size 12</option>
-        													</select>
-                                                        </td>
-														<td class="text-center">
-                                                            <select class="form-control" name="request_satuan" disabled>
-        														<option>Box</option>
-        														<option>Box</option>
-        														<option>Box</option>
-        													</select>
-                                                        </td>
-														<td class="text-center">
-                                                            <input type="number" class="form-control" name="request_jumlah_request" value="5" readonly>
-                                                        </td>
-                                                        <td class="text-center">
-                                                            <input type="number" class="form-control" name="request_jumlah_terkirim" value="3" readonly>
-                                                        </td>
-                                                        <td class="text-center">
-                                                            <input type="number" class="form-control" name="request_jumlah_diterima" value="3" readonly>
-                                                        </td>
-                                                        <td class="text-center">
-                                                            <input type="number" class="form-control" name="request_margin" value="2" readonly>
-                                                        </td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
+											<form id="kt_form_request_barang">
+												<div class="kt-margin-b-20">
+													<label class="kt-margin-b-15" style="font-size: 1rem;font-weight: 400;">Item List : </label>
+													<div class="table-responsive">
+														<table class="table table-bordered table-hover well-align-table table-mobile" role="grid" id="table_request_stock_detail_diterima">
+															<thead>
+			                                                    <tr role="row">
+			                                                        <th style="width: 5%">No</th>
+			                                                        <th style="width: 25%">Barang</th>
+			                                                        <th style="width: 15%">Satuan</th>
+			                                                        <th style="width: 12.5%">Request</th>
+			                                                        <th style="width: 12.5%">Terkirim</th>
+			                                                        <th style="width: 12.5%">Diterima</th>
+			                                                        <th style="width: 17.5%">Margin Hilang</th>
+			                                                    </tr>
+			                                                </thead>
+			                                            </table>
+													</div>
+												</div>
+												<div class="form-group form-group-last">
+													<label class="kt-margin-b-15" for="request_notes">Notes: </label>
+													<textarea class="form-control readonly" id="request_notes" name="request_notes" rows="3" readonly>Lorem ipsum dolor sit amet</textarea>
+												</div>
+											</form>
 										</div>
 									</div>
 
