--- a/user_gudang/request_stock.html
+++ b/user_gudang/request_stock.html
@@ -129,6 +129,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								</svg></span><span class="kt-menu__link-text">Master Data</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
+											<li class="kt-menu__item " aria-haspopup="true"><a href="user_gudang/md_satuan.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Satuan</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_gudang/md_barang.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Barang</span></a></li>
 										</ul>
 									</div>
