--- a/user_supervisor_studio/treatment_detail_paid.html
+++ b/user_supervisor_studio/treatment_detail_paid.html
@@ -135,7 +135,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									<div class="kt-menu__submenu "><span class="kt-menu__arrow"></span>
 										<ul class="kt-menu__subnav">
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_supervisor_studio/treatment_active.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Active Treatments</span></a></li>
-											<li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_supervisor_studio/treatment_all.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">All Treatments</span></a></li>
+											<li class="kt-menu__item kt-menu__item--active" aria-haspopup="true"><a href="user_supervisor_studio/treatment_paid.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Paid Treatments</span></a></li>
 											<li class="kt-menu__item " aria-haspopup="true"><a href="user_supervisor_studio/treatment_void.html" class="kt-menu__link "><i class="kt-menu__link-bullet kt-menu__link-bullet--dot"><span></span></i><span class="kt-menu__link-text">Void Treatments</span></a></li>
 										</ul>
 									</div>
@@ -302,10 +302,10 @@ License: You must have a valid license purchased only from themeforest(the above
 										List Treatment </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_supervisor_studio/treatment_all.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_supervisor_studio/treatment_paid.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 										<span class="kt-subheader__breadcrumbs-separator"></span>
-										<a href="user_supervisor_studio/treatment_all.html" class="kt-subheader__breadcrumbs-link">
-											All Treatments </a>
+										<a href="user_supervisor_studio/treatment_paid.html" class="kt-subheader__breadcrumbs-link">
+											Paid Treatments </a>
                                         <span class="kt-subheader__breadcrumbs-separator"></span>
 										<a href="user_supervisor_studio/treatment_detail_paid.html" class="kt-subheader__breadcrumbs-link">
 											Treatment Details </a>
