--- a/user_admin/profile_kehadiran.html
+++ b/user_admin/profile_kehadiran.html
@@ -440,7 +440,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <label for="example-text-input" class="col-3 col-form-label">Tanggal</label>
                                                     <div class="col-9">
 														<div class="input-group date">
-	                                                        <input type="text" class="form-control kt_multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
+	                                                        <input type="text" class="form-control kt-multidatepicker" placeholder="Tanggal" name="dayoff_tanggal" readonly>
 															<div class="input-group-append">
 																<span class="input-group-text">
 																	<i class="la la-calendar-check-o"></i>
