--- a/user_gudang/md_barang.html
+++ b/user_gudang/md_barang.html
@@ -377,7 +377,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															<input type="number" min="1" class="form-control input-group-child-normal kt-margin-r-5" name="data_barang_satuan_sedang_jumlah" placeholder="Jumlah">
 															<span class="input-group-text" name="data_barang_satuan_sedang_kecil">Pcs</span>
 														</div>
-														<span class="form-text text-muted kt-hidden" style="margin:0px;"></span>
+														<span class="form-text text-muted">1 Satuan Sedang = X Satuan Kecil</span>
 													</div>
 												</div>
 												<div class="form-group row kt-margin-b-5">
@@ -397,7 +397,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															<input type="number" min="1" class="form-control input-group-child-normal kt-margin-r-5" name="data_barang_satuan_besar_jumlah" placeholder="Jumlah">
 															<span class="input-group-text" name="data_barang_satuan_besar_sedang">Pack</span>
 														</div>
-														<span class="form-text text-muted kt-hidden" style="margin:0px;"></span>
+														<span class="form-text text-muted">1 Satuan Besar = X Satuan Sedang</span>
 													</div>
 												</div>
 												<div class="form-group row">
